# ccbookmark

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ccbookmark/: __init__.py  cli.py  core.py  mcp_server.py  parser.py  paths.py  store.py  summarize.py  web.py
ccbookmark/static/: app.css  app.js  index.html
tests/: test_core.py  test_parser.py  test_paths.py  test_summarize.py
tests/fixtures/: sample-session.jsonl
