[project]
name = "ccbookmark"
version = "0.1.0"
description = "Bookmark, resume, and export Claude Code conversations by session id."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kilian Cañizares Mata" }]
keywords = ["claude", "claude-code", "conversation", "session", "mcp", "cli"]
dependencies = [
    "mcp>=1.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/kiliancm94/ccbookmark"
Repository = "https://github.com/kiliancm94/ccbookmark"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]

[project.scripts]
ccbookmark = "ccbookmark.cli:app"
ccbookmark-mcp = "ccbookmark.mcp_server:main"
ccbookmark-web = "ccbookmark.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ccbookmark"]

[tool.pyright]
include = ["ccbookmark", "tests"]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
